--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,14 +34,14 @@
 steps:
   # Build the Docker image using the Docker Cloud Builder
   - name: 'gcr.io/cloud-builders/docker'
-    # args: ['build', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:$COMMIT_SHA', '.']
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:latest', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:$COMMIT_SHA', '.']
+    # args: ['build', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:$COMMIT_SHA', '.']
 
   # Push the image to Google Artifact Registry
+  #- name: 'gcr.io/cloud-builders/docker'
+    #args: ['push', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:latest']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:latest']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:$COMMIT_SHA']
+    args: ['push', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:$COMMIT_SHA']
 
   # Deploy the container to Google Cloud Run
  # - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -51,7 +51,7 @@ steps:
   #    - 'deploy'
   #    - 'devops-lab2'
   #    - '--image'
-  #    - 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:latest'
+  #    - 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:latest'
   #    - '--region'
    #   - 'us-central1'
    #   - '--platform'
@@ -63,8 +63,8 @@ steps:
 #   logging: 'Adwaith-log'
 
 images:
-  - 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:latest'
-  - 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331:$COMMIT_SHA'
+ # - 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:latest'
+  - 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:$COMMIT_SHA'
 
 
 
