--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -37,7 +37,7 @@ steps:
   # Build the Docker image using the Docker Cloud Builder
   - name: 'gcr.io/cloud-builders/docker'
     # args: ['build', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:$COMMIT_SHA', '.']
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:latest', '-t', 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:$COMMIT_SHA', '.']
 
   # Push the image to Google Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
