--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -51,7 +51,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'devops-lab2'
+      - 'adwaith-100936331'
       - '--image'
       - 'us-central1-docker.pkg.dev/woven-parsec-413519/adwaith-100936331/devops-lab2:latest'
       - '--region'
